--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean --force && npm i",
     "test:watch": "jest --watch",
+    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/ConvenzioniCISL/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
     "updateSnapshot": "jest --updateSnapshot",
     "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
     "android:build": "cd android && ./gradlew assembleRelease",
@@ -36,7 +37,7 @@
     "prop-types": "^15.6.0",
     "querystringify": "0.0.4",
     "ramda": "^0.24.1",
-    "react": "16.0.0-beta.5",
+    "react": "16.3.1",
     "react-native": "0.49.3",
     "react-native-android-location-services-dialog-box": "2.3.2",
     "react-native-animatable": "^1.2.4",
@@ -53,10 +54,10 @@
     "react-native-material-textfield": "^0.10.2",
     "react-native-material-ui": "^1.14.0",
     "react-native-modalbox": "^1.4.2",
-    "react-native-permissions": "^1.0.1",
+    "react-native-permissions": "^1.1.1",
     "react-native-settings": "^0.0.1-alpha5",
     "react-native-simple-toast": "^0.0.7",
-    "react-native-vector-icons": "4.3.0",
+    "react-native-vector-icons": "^6.4.2",
     "react-native-youtube": "^1.0.1",
     "react-navigation": "^1.0.0-beta.7",
     "react-redux": "^5.0.2",
